Fix scrollbar in selected slots

--- a/assets/css/reservation_system_style.css
+++ b/assets/css/reservation_system_style.css
@@ -48,8 +48,7 @@ div.date-font {
 }
 
 #slots_selected {
-    height: 200px;
-    max-height: 200px;
+    height: auto;
 }
 
 #my_number_of_slots{
